--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,20 +4,20 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     //Splash Screen activity
     //progressBar
-    <dimen name="progressBar_top_margin">20dp</dimen>
+    <dimen name="progressbar_top_margin">20dp</dimen>
     //textviewBlogRadioTitle
-    <dimen name="textviewBlogRadioTitle_top_margin">20dp</dimen>
-    <dimen name="textviewBlogRadioTitle_padding">10dp</dimen>
-    <dimen name="textviewBlogRadioTitle_textSize">30sp</dimen>
+    <dimen name="textview_blog_radio_title_top_margin">20dp</dimen>
+    <dimen name="textview_blog_radio_title_padding">10dp</dimen>
+    <dimen name="textview_blog_radio_title_textsize">30sp</dimen>
     //textviewShowYourFeels
-    <dimen name="textviewShowYourFeels_top_margin">8dp</dimen>
-    <dimen name="textviewShowYourFeels_padding_top">2dp</dimen>
-    <dimen name="textviewShowYourFeels_padding_left">10dp</dimen>
-    <dimen name="textviewShowYourFeels_padding_bottom">5dp</dimen>
-    <dimen name="textviewShowYourFeels_textSize">20sp</dimen>
+    <dimen name="textview_show_your_feels_top_margin">8dp</dimen>
+    <dimen name="textview_show_your_feels_padding_top">2dp</dimen>
+    <dimen name="textview_show_your_feels_padding_left">10dp</dimen>
+    <dimen name="textview_show_your_feels_padding_bottom">5dp</dimen>
+    <dimen name="textview_show_your_feels_textsize">20sp</dimen>
     //textViewConffessionTitle
-    <dimen name="textviewConfession_top_margin">10dp</dimen>
-    <dimen name="textviewConfession_padding">10dp</dimen>
-    <dimen name="textviewConfession_textSize">16sp</dimen>
+    <dimen name="textview_confession_top_margin">10dp</dimen>
+    <dimen name="textview_confession_padding">10dp</dimen>
+    <dimen name="textview_confession_textsize">16sp</dimen>
 
 </resources>
