--- a/app/src/main/res/layout/splash_screen_activity.xml
+++ b/app/src/main/res/layout/splash_screen_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_splash_screen"
-    tools:context="oliverdev.com.blogradio.activities.SplashScreenMainActivity">
+    tools:context="oliverdev.com.blogradio.activities.SplashScreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
