--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg_splash_screen"
-    tools:context="oliverdev.com.blogradio.activities.MainActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolBar"
-        android:gravity="center"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:background="@drawable/bg_background_new_blog_radio_fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ToolBarTheme.ToolBarStyle"
-        android:popupTheme="@style/Theme.AppCompat.Light" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+         <include layout="@layout/include_toolbar"/>
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/frame_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@drawable/bg_category_navigation_view"
+        app:headerLayout="@layout/header_navigation_view"
+        app:itemTextColor="@android:color/white"
+        app:menu="@menu/drawer_menu"
+        app:itemTextAppearance="@style/navigationViewTextAppearanceStyle"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+</android.support.v4.widget.DrawerLayout>
 
-</LinearLayout>
