upload source code

--- a/app/src/main/res/layout/item_recyclerview_header_navigation.xml
+++ b/app/src/main/res/layout/item_recyclerview_header_navigation.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="@bool/fitsSystemWindows"
     android:background="@drawable/bg_header_navigation"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/navigation.height.header">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/relativelayout.height.header_navigation_view"
         android:layout_alignParentBottom="true"
-        android:background="@color/framelayout.background.custom_header_navigation_view">
+        android:background="@color/framelayout.background.header_recyclerview_navigation">
         <TextView
             style="@style/textviewBlogRadioTitleStyle"
             android:layout_width="match_parent"
