--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,16 +17,12 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@drawable/bg_category_navigation_view"
-        app:headerLayout="@layout/header_navigation_view"
-        app:itemTextColor="@android:color/white"
-        app:menu="@menu/drawer_menu"
-        app:itemTextAppearance="@style/navigationViewTextAppearanceStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="@drawable/bg_category_navigation_view" />
 </android.support.v4.widget.DrawerLayout>
 
