--- a/app/src/main/res/layout/item_recyclerview_category_title_navigation.xml
+++ b/app/src/main/res/layout/item_recyclerview_category_title_navigation.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/textview.text.category"
-    android:textStyle="bold"
-    android:layout_marginTop="@dimen/textview.margin.top.category"
-    android:textColor="@android:color/white"
-    android:padding="@dimen/textview.padding.category"
-    android:textSize="@dimen/textview.textsize.title"
-    android:layout_marginLeft="@dimen/textview.margin.left.category"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/TvTitleCategory"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/textview.margin.left.category"
+    android:layout_marginStart="@dimen/textview.margin.left.category"
+    android:layout_marginTop="@dimen/textview.margin.top.category"
+    android:padding="@dimen/textview.padding.category"
+    android:text="@string/textview.text.category"
+    android:textColor="@android:color/white"
+    android:textSize="@dimen/textview.textsize.title"
+    android:textStyle="bold" />
