--- a/app/src/main/res/layout/item_recyclerview_header_navigation.xml
+++ b/app/src/main/res/layout/item_recyclerview_header_navigation.xml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="@bool/fitsSystemWindows"
+    android:layout_height="@dimen/navigation.height.header"
     android:background="@drawable/bg_header_navigation"
-    android:layout_height="@dimen/navigation.height.header">
+    android:fitsSystemWindows="@bool/fitsSystemWindows"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/relativelayout.height.header_navigation_view"
         android:layout_alignParentBottom="true"
         android:background="@color/framelayout.background.header_recyclerview_navigation">
+
         <TextView
+            android:id="@+id/TvBlogRadio"
             style="@style/textviewBlogRadioTitleStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/TvBlogRadio"
             android:gravity="center"
-            android:textStyle="bold"
+            android:text="@string/textview.text.blog_radio_navigation"
             android:textColor="@android:color/white"
-            android:text="@string/textview.text.blog_radio_navigation"/>
+            android:textStyle="bold" />
+
         <TextView
-            android:padding="@dimen/textview.padding.top.show_your_feels"
-            android:textStyle="italic"
-            android:textSize="@dimen/textview.textsize.show_your_feels_navigationview"
-            android:textColor="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/textview.padding.left.show_your_feels_navigationview"
             android:layout_below="@+id/TvBlogRadio"
-            android:gravity="center_vertical|right"
+            android:layout_marginEnd="@dimen/textview.padding.left.show_your_feels_navigationview"
+            android:layout_marginRight="@dimen/textview.padding.left.show_your_feels_navigationview"
+            android:gravity="center_vertical|end"
+            android:padding="@dimen/textview.padding.top.show_your_feels"
             android:text="@string/textview.text.show_your_feels"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/textview.textsize.show_your_feels_navigationview"
+            android:textStyle="italic"
 
             />
     </RelativeLayout>
