--- a/app/src/main/res/layout/splash_screen_activity.xml
+++ b/app/src/main/res/layout/splash_screen_activity.xml
@@ -17,20 +17,24 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/textview.top.margin.blog_radio_title"
             android:padding="@dimen/textview.padding.blog_radio_title"
-            android:textColor="@color/textview.color.splash_screen"
             android:text="@string/textview.text.blog_radio"
+            android:textColor="@color/textview.color.splash_screen"
             android:textSize="@dimen/textview.textsize.blog_radio_title"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/tvShowYourFeelsTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/textview.margin.top.show_your_feels"
             android:paddingBottom="@dimen/textview.padding.bottom.show_your_feels"
+            android:paddingEnd="@dimen/textview.padding.right.show_your_feels"
             android:paddingLeft="@dimen/textview.padding.left.show_your_feels"
+            android:paddingRight="@dimen/textview.padding.right.show_your_feels"
+            android:paddingStart="@dimen/textview.padding.left.show_your_feels"
             android:paddingTop="@dimen/textview.padding.top.show_your_feels"
-            android:textColor="@color/textview.color.splash_screen"
             android:text="@string/textview.text.show_your_feels"
+            android:textColor="@color/textview.color.splash_screen"
             android:textSize="@dimen/textview.textsize.show_your_feels"
             android:textStyle="italic" />
 
@@ -40,8 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/textview.margin.top.confession"
             android:padding="@dimen/textview.padding.confession"
-            android:textColor="@color/textview.color.splash_screen"
             android:text="@string/textview.text.confession"
+            android:textColor="@color/textview.color.splash_screen"
             android:textSize="@dimen/textview.textsize.confession" />
 
         <ProgressBar
