--- a/app/src/main/res/layout/item_recyclerview_category_title_navigation.xml
+++ b/app/src/main/res/layout/item_recyclerview_category_title_navigation.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/TvTitleCategory"
+    android:id="@+id/tvTitleCategory"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/textview.margin.left.category"
