--- a/app/src/main/res/layout/item_recyclerview_navigation.xml
+++ b/app/src/main/res/layout/item_recyclerview_navigation.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/ic_download" />
 
     <TextView
-        android:id="@+id/TvTitle"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/textview.mardin.left.title"
